@@ -1,5 +1,6 @@
 # Version 0.9
 
+* Allow dual blocks in destroy;
 * Added :if and :unless to has_scope (thanks to Jack Danger);
 * Added create_resource, update_resource and delete_resource hooks (thanks to Carlos Antonio da Silva);
 * Backported ActionController::Responder from Rails 3;
